--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Dashboard{% endblock %}
 
@@ -90,29 +91,49 @@
             {% if outerwears %}
               <!-- 3 sections including outerwear -->
               <div class="col-sm-4 border-right">
-                <div class="text-center">
+                <ul class="nav nav-pills justify-content-center" role="tablist">
+                  {% for clothes in outerwears %}
+                    {% include "include/clothes_tab.html" %}
+                  {% endfor %}
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content text-center pt-3">
                   {% for outerwear in outerwears %}
-                    <a href="#" data-toggle="popover" data-content="{{outerwear.name}}" data-trigger="hover" data-placement="bottom">
-                      <img src="/static/img/icon/clothes/{{outerwear.name}}.jpg" alt="{{outerwear.name}}" height="100px" width="auto">
-                    </a>
+                    <div id="{{outerwear.name|slugify}}" class="container tab-pane fade"><br>
+                    </div>
                   {% endfor %}
                 </div>
+                <!-- tab panes-->
               </div>
+
               <div class="col-sm-4 border-right">
-                <div class="text-center">
+                <ul class="nav nav-pills justify-content-center" role="tablist">
+                  {% for clothes in tops %}
+                    {% include "include/clothes_tab.html" %}
+                  {% endfor %}
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content text-center pt-3">
                   {% for top in tops %}
-                    <a href="#" data-toggle="popover" data-content="{{top.name}}" data-trigger="hover" data-placement="bottom">
-                      <img src="/static/img/icon/clothes/{{top.name}}.jpg" alt="{{top.name}}" height="100px" width="auto">
-                    </a>
+                    <div id="{{top.name|slugify}}" class="container tab-pane fade"><br>
+                    </div>
                   {% endfor %}
                 </div>
               </div>
               <div class="col-sm-4">
-                <div class="text-center">
+                <ul class="nav nav-pills justify-content-center" role="tablist">
+                  {% for clothes in bottoms %}
+                    {% include "include/clothes_tab.html" %}
+                  {% endfor %}
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content text-center pt-3">
                   {% for bottom in bottoms %}
-                    <a href="#" data-toggle="popover" data-content="{{bottom.name}}" data-trigger="hover" data-placement="bottom">
-                      <img src="/static/img/icon/clothes/{{bottom.name}}.jpg" alt="{{bottom.name}}" height="100px" width="auto">
-                    </a>
+                    <div id="{{bottom.name|slugify}}" class="container tab-pane active"><br>
+                    </div>
                   {% endfor %}
                 </div>
               </div>
@@ -120,12 +141,12 @@
               <!-- 2 sections except outerwear -->
               <div class="col-sm-6">
                 {% for top in tops %}
-                  <img src="/static/img/icon/clothes/{{top.name}}.jpg" alt="{{top.name}}" height="100px" width="auto">
+                  <img src="/static/img/icon/clothes/{{top.name}}.jpg" alt="{{top.name}}" height="70px" width="auto">
                 {% endfor %}
               </div>
               <div class="col-sm-6">
                 {% for bottom in bottoms %}
-                  <img src="/static/img/icon/clothes/{{bottom.name}}.jpg" alt="{{bottom.name}}" height="100px" width="auto">
+                  <img src="/static/img/icon/clothes/{{bottom.name}}.jpg" alt="{{bottom.name}}" height="70px" width="auto">
                 {% endfor %}
               </div>
             {% endif %}
@@ -138,6 +159,42 @@
   </div>
   <!-- row -->
 
+{% endblock %}
+
+{% block script %}
+  <script src="{% static 'js/jquery.inview.js' %}"></script>
+  <script>
+    $('.nav-link').on('click', function () {
+      const categoryIdName = $(this).attr('href');
+      $.ajax({
+        url: "{% url 'ajax_get_clothes' %}",
+        type: 'GET',
+        data: {
+          'category_name': categoryIdName
+        }
+      }).done(function (data) {
+        var pillContent = $(categoryIdName).empty();
+
+        if (data['isSuccess'] == false) {
+          pillContent.append(data['clothesDict']['text'])
+        } else {
+          const clothesDict = data['clothesDict'];
+          for (const clothes of clothesDict) {
+            const clothesBtn = $('<button class="btn">');
+            const clothesName = $('<span class="pl-3">');
+            const clothesImg = $('<img height="40px" width="auto">');
+            clothesBtn.val(clothes['pk']);
+            clothesImg.attr('src', clothes['image']);
+            clothesImg.attr('alt', clothes['name']);
+            clothesName.text(clothes['name']);
+            clothesBtn.append(clothesImg).append(clothesName);
+            pillContent.append(clothesBtn).append('<br>');
+          }
+        }
+
+      });
+    });
+  </script>
   <script>
     $(document).ready(function () {
       $('[data-toggle="popover"]').popover();
